src/ast/snapshots/tests__symbol_table_simple.snap
---
source: src/ast/symbol.rs
expression: determinize(table)
---
[
    (
        ScopeId(
            0,
        ),
        Scope {
            parent: None,
            variables: PartialSymbolTable {
                vars: [],
            },
        },
    ),
    (
        ScopeId(
            1,
        ),
        Scope {
            parent: Some(
                ScopeId(
                    0,
                ),
            ),
            variables: PartialSymbolTable {
                vars: [
                    VariableRecord {
                        id: IdentId(
                            0,
                        ),
                        text: "x",
                        decl: Decl(
                            Decl(
                                NodeId(
                                    8,
                                ),
                            ),
                        ),
                    },
                ],
            },
        },
    ),
]
