src/ast/snapshots/tests__type_arithmetic.snap
---
source: src/ast/types.rs
expression: test_input(input)
---
Ok(
    (
        [
            (
                IdentId(
                    0,
                ),
                Int,
            ),
        ],
        [],
    ),
)
