src/ast/snapshots/tests__type_bool_arithmetic_relation.snap
---
source: src/ast/types.rs
expression: test_input(input)
---
Ok(
    (
        [
            (
                IdentId(
                    0,
                ),
                Bool,
            ),
        ],
        [],
    ),
)
