src/ast/snapshots/tests__type_closure_not_set.snap
---
source: src/ast/types.rs
expression: test_input(input)
---
Err(
    [
        AssignedBeforeDeclared(
            IdentId(
                1,
            ),
        ),
        ExpectedFoundAt(
            Int,
            Unspecified,
            NodeId(
                32,
            ),
        ),
        AssignedBeforeDeclared(
            IdentId(
                1,
            ),
        ),
        ExpectedFoundAt(
            Int,
            Unspecified,
            NodeId(
                32,
            ),
        ),
    ],
)
