src/ast/snapshots/tests__type_closure_valid.snap
---
source: src/ast/types.rs
expression: test_input(input)
---
Ok(
    (
        [
            (
                IdentId(
                    0,
                ),
                Int,
            ),
            (
                IdentId(
                    2,
                ),
                Int,
            ),
            (
                IdentId(
                    3,
                ),
                Int,
            ),
        ],
        [
            (
                IdentId(
                    1,
                ),
                FuncType {
                    args: [
                        Int,
                    ],
                    out: Some(
                        Int,
                    ),
                },
            ),
        ],
    ),
)
