src/ast/snapshots/tests__type_declared_not_set.snap
---
source: src/ast/types.rs
expression: test_input(input)
---
Err(
    [
        NotResolved(
            IdentId(
                0,
            ),
        ),
    ],
)
