src/ast/snapshots/tests__type_easy_variable_inf.snap
---
source: src/ast/types.rs
expression: test_input(input)
---
Ok(
    (
        [
            (
                IdentId(
                    0,
                ),
                Int,
            ),
            (
                IdentId(
                    1,
                ),
                Int,
            ),
        ],
        [],
    ),
)
