src/ast/snapshots/tests__type_fun_call_before_decl_num.snap
---
source: src/ast/types.rs
expression: test_input(input)
---
Ok(
    (
        [
            (
                IdentId(
                    0,
                ),
                Int,
            ),
            (
                IdentId(
                    2,
                ),
                Int,
            ),
        ],
        [
            (
                IdentId(
                    1,
                ),
                FuncType {
                    args: [
                        Int,
                    ],
                    out: Some(
                        Int,
                    ),
                },
            ),
        ],
    ),
)
