src/ast/snapshots/tests__type_fun_call_in_expr_invalid_arg_num.snap
---
source: src/ast/types.rs
expression: test_input(input)
---
Err(
    [
        FunctionCallExpected(
            1,
            2,
        ),
    ],
)
