src/ast/snapshots/tests__type_fun_call_in_expr_invalid_arg_ty.snap
---
source: src/ast/types.rs
expression: test_input(input)
---
Err(
    [
        ExpectedFoundAt(
            Int,
            Str,
            NodeId(
                23,
            ),
        ),
    ],
)
