src/ast/snapshots/tests__type_fun_decl_call_in_expr.snap
---
source: src/ast/types.rs
expression: test_input(input)
---
Ok(
    (
        [
            (
                IdentId(
                    1,
                ),
                Int,
            ),
            (
                IdentId(
                    2,
                ),
                Int,
            ),
        ],
        [
            (
                IdentId(
                    0,
                ),
                FuncType {
                    args: [
                        Int,
                    ],
                    out: Some(
                        Int,
                    ),
                },
            ),
        ],
    ),
)
